tests/models/struct/unnamed/u128/fail/min_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_length = 2)]
    u128
);
fn main() {}
